# arcade-secure-mcp

libs/arcade-tdk/: pyproject.toml
libs/arcade-tdk/arcade_tdk/providers/http/: error_adapter.py
libs/tests/sdk/: test_httpx_adapter.py
toolkits/ramp_api/: .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
toolkits/ramp_api/arcade_ramp_api/moar/: openapi.json  ramp.json
toolkits/ramp_api/arcade_ramp_api/tools/: __init__.py  request_body_schemas.py
toolkits/ramp_api/arcade_ramp_api/wrapper_tools/: AddToReceiptOptOutList.json  AddUsersToSpendLimit.json  AppendCellsToCustomTable.json  AppendCellsToNativeTable.json  ArchivePurchaseOrder.json  ChangeNativeTableColumnName.json  CreateAccountingConnection.json  CreateBillsWithPagination.json  CreateCustomTable.json  CreateCustomTableColumn.json  CreateDepartment.json  CreateItemReceipt.json  CreateLocation.json  CreateMileageReimbursement.json  CreateNativeTableField.json  CreateOrReactivateCustomField.json  CreatePurchaseOrder.json  CreateSalesLead.json  CreateSpendAllocationCard.json  CreateSpendLimit.json  CreateSpendProgram.json  CreateVendor.json  CreateVirtualCardRequest.json  DeactivateUserAccount.json  DeleteBill.json  DeleteCustomAccountingField.json  DeleteCustomAccountingFieldOption.json  DeleteCustomTableRow.json  DeleteGeneralLedgerAccount.json  DeleteItemReceipt.json  DeleteVendor.json  DeleteWebhookSubscription.json  DisconnectAccountingConnection.json  ExtendNativeTable.json  FetchAccountingConnections.json  FetchBillDetails.json  FetchCardInfo.json  FetchCashbackPayment.json  FetchCompanyInfo.json  FetchCustomAccountingField.json  (+105 more)
